Added menu in lines screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Bus Santiago</string>
+  <string name="app_name">Bus Santiago</string>
+  <string name="favorites">Favoritas</string>
 </resources>
