--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
   <string name="app_name">Bus Santiago</string>
   <string name="favorites">Favoritas</string>
+  <string name="menu_icon_description">Menu icon</string>
+  <string name="information">Información</string>
+  <string name="incidences">Incidencias</string>
 </resources>
