--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-  <string name="app_name">Bus Santiago</string>
+  <string name="app_name" translatable="false">Bus Santiago</string>
   <string name="favorites">Favoritas</string>
-  <string name="menu_icon_description">Menu icon</string>
+  <string name="menu_icon_description" translatable="false">Menu icon</string>
   <string name="information">Información</string>
   <string name="incidences">Incidencias</string>
+  <string name="lines">Líneas</string>
 </resources>
