--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
   <string name="lines">Líneas</string>
   <string name="aceptar">Aceptar</string>
   <string name="no_information">Sin información</string>
+  <string name="no_favorites">No hay paradas favoritas</string>
 </resources>
