--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
   <string name="return_route_stops">Paradas vuelta</string>
   <string name="favorite_stop">Parada favorita</string>
   <string name="no_favorite_stop">Parada no favorita</string>
+  <string name="lista">Lista</string>
+  <string name="mapa">Mapa</string>
 </resources>
