--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
   <string name="no_favorite_stop">Parada no favorita</string>
   <string name="lista">Lista</string>
   <string name="mapa">Mapa</string>
+  <string name="select_stop">Seleccionar parada</string>
+  <string name="action_refresh_widget" translatable="false">org.galio.bussantiago.REFRESH_WIDGET</string>
 </resources>
