--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,9 @@
   <string name="return_route_stops">Paradas vuelta</string>
   <string name="favorite_stop">Parada favorita</string>
   <string name="no_favorite_stop">Parada no favorita</string>
-  <string name="lista">Lista</string>
-  <string name="mapa">Mapa</string>
+  <string name="list">Lista</string>
+  <string name="map">Mapa</string>
   <string name="select_stop">Seleccionar parada</string>
   <string name="action_refresh_widget" translatable="false">org.galio.bussantiago.REFRESH_WIDGET</string>
+  <string name="sync_widget">Sincronizar Widget</string>
 </resources>
