--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
   <string name="author">Autor</string>
   <string name="author_name">José Ángel Maneiro González</string>
   <string name="author_web">www.joseangelmaneiro.com</string>
+  <string name="author_email">joseangelmaneiro@yahoo.es</string>
   <string name="privacy_policy">Política de privacidad</string>
   <string name="privacy_policy_description">Bus Santiago es una aplicación donde poder consultar
     información relativa al transporte urbano de Santiago de Compostela. Esta aplicación no
