Implement custom filter in suggestions adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,5 +44,6 @@
   perfectamente en caso de que el permiso no sea aceptado.</string>
   <string name="remove_search_text">Borrar texto de búsqueda</string>
   <string name="favorite_bus_stops">Paradas favoritas</string>
+  <string name="center_my_position_in_map">Centrar mi posición en el mapa</string>
 </resources>
 
